# prophecy

./: .gitignore  .gitmodules  AI_PROVIDERS.md  LICENSE  README.md  environment.yml  new_testament.json  pyproject.toml  stories.yml
.github/workflows/: pages.yml  test.yml
data/: README.md  index.json  new_testament.json  old_testament.json  prompts.tsv  stories.yml  template.txt
data/hebrew/: 1Chronicles.json  1Kgs.json  1Samuel.json  2Chronicles.json  2Kgs.json  2Samuel.json  Amos.json  Daniel.json  Deuteronomy.json  Ecclesiastes.json  Esth.json  Exodus.json  Ezekiel.json  Ezra.json  Genesis.json  Habakkuk.json  Haggai.json  Hos.json  Isaiah.json  Jeremiah.json  Job.json  Joel.json  Jonah.json  Joshua.json  Judges.json  Lam.json  Leviticus.json  Malachi.json  Micah.json  Nahum.json  Nehemiah.json  Numbers.json  Obadiah.json  Proverbs.json  Ps.json  Ruth.json  SongofSolomon.json  Zechariah.json  Zeph.json
examples/: README.md  ai_provider_demo.py  bible_api_demo.py  prompts_usage_demo.py
prophecy/: README.md  __init__.py  __main__.py  ai_providers.py  bible.py  prompts.py  settings.py  stories.py
prophecy/providers/: __init__.py  base.py  chatgpt.py  claude_api.py  claude_cli.py
scripts/: Analysis.rmd  README.md  convert_wlc_to_json.py  create_bible_indexes.py  create_sources.py  example_usage.py
tests/: README.md  README_create_sources_tests.md  __init__.py  test_ai_providers.py  test_bible.py  test_caching.py  test_create_sources.py  test_engine_id.py  test_export.py  test_hebrew_kjv_comparison.py  test_main_cli.py  test_prompt_selection.py  test_prompts.py  test_prompts_class.py  test_settings.py  test_stories.py  test_stories_structure.py
viewer/: app.js  index.html  styles.css
